<resources>
    <string name="app_name">BacaanSholat</string>
    <string name="bacaan_sholat" />
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="wilayah_lombok_tengah_dan_sekitarya">Wilayah Lombok Tengah dan Sekitarya</string>
    <string name="berdiri_tegak">Berdiri Tegak</string>
    <string name="takbiratul_ihram">Takbiratul Ihram</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="subuh">Subuh</string>
    <string name="_05_20">05:20</string>
    <string name="todo">TODO</string>
    <string name="bersedekap">Bersedekap</string>
    <string name="rukuk">Rukuk</string>
    <string name="i_tidal">I\'tidal</string>
    <string name="membaca_do_a_qunut">Membaca Do\'a Qunut</string>
    <string name="sujud">Sujud</string>
    <string name="duduk_tasyahud_awal">Duduk Tasyahud Awal</string>
    <string name="duduk_tasyahud_akhir">Duduk Tasyahud Akhir</string>
    <string name="salam">Salam</string>
    <string name="pengertian">Pengertian</string>
    <string name="niat">Niat</string>
    <string name="itidal">Itidal</string>
    <string name="membaca_doa_qunut">Membaca Doa Qunut</string>
    <string name="tasyahud_akhir">Tasyahud Akhir</string>
    <string name="NIAT">NIAT</string>
    <string name="niat_sholat_subuh">Niat Sholat Subuh</string>
    <string name="imam">Imam</string>
    <string name="niatimam">أُصَلِّي فَرْضَ الصُّبْحِ رَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ أَدَاءً إِمَامًا لِلهِ تَعَالَى</string>
    <string name="yang_artinya_aku_berniat_sholat_fardhu_subuh_dua_rakaat_menghadap_kiblat_imam_karena_allah_ta_ala">Yang artinya, “Aku berniat sholat fardhu Subuh dua rakaat menghadap kiblat imam karena Allah Ta’ala.”</string>
    <string name="makmum">Makmum</string>
    <string name="niatmakmum">أُصَلِّي فَرْضَ الصُّبْحِ رَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ أَدَاءً مَأْمُوْمًا لِلهِ تَعَالَى</string>
    <string name="yang_artinya_aku_berniat_sholat_fardhu_subuh_dua_rakaat_menghadap_kiblat_sebagai_makmum_karena_allah_ta_ala">Yang artinya, “Aku berniat sholat fardhu Subuh dua rakaat menghadap kiblat sebagai makmum karena Allah Ta’ala.”</string>
    <string name="sendiri">Sendiri</string>
    <string name="niatsendiri">أُصَلِّى فَرْضَ الصُّبْح رَكَعتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ أَدَاءً لله تَعَالَى</string>
    <string name="artinya_aku_berniat_mengerjakan_sholat_fardhu_shubuh_sebanyak_dua_raka_at_dengan_menghadap_kiblat_karena_allah_ta_ala">Artinya: Aku berniat mengerjakan sholat fardhu Shubuh sebanyak dua raka’at dengan menghadap kiblat, karena Allah Ta’ala.</string>
    <string name="niat_sholat">Niat Sholat</string>
    <string name="niat_sholat_sebelum_memulai_sholat_maka_membaca_niat_sholat_niat_menjadi_salah_satu_rukun_sholat_yang_harus_dikerjakan_jika_tidak_maka_sholatnya_tidak_sah_dalam_niat_harus_ditentukan_jenis_jenis_sholat_yang_ingin_dikerjakan_misalnya_sholat_wajib_atau_sunnah_makmum_atau_imam_tempat_niat_di_dalam_hati_tanpa_ada_khilafiyah_di_kalangan_ulama_dalam_madzhab_syafii_diperbolehkan_melafadzkan_niat_bagi_orang_yang_mempunyai_penyakit_waswas_dalam_dirinya">Niat Sholat,sebelum memulai sholat maka membaca niat sholat. Niat menjadi salah satu rukun sholat yang harus dikerjakan, jika tidak maka sholatnya tidak sah. Dalam niat harus ditentukan jenis-jenis sholat yang ingin dikerjakan.Misalnya sholat wajib atau sunnah, makmum atau imam. Tempat niat di dalam hati, tanpa ada khilafiyah di kalangan ulama. Dalam Madzhab Syafii, diperbolehkan melafadzkan niat bagi orang yang mempunyai penyakit waswas dalam dirinya.</string>
    <string name="imam_sholat_subuh">Imam Sholat Subuh</string>
    <string name="makmum_sholat_subuh">Makmum Sholat Subuh</string>
    <string name="sendiri_sholat_subuh">Sendiri Sholat Subuh</string>
    <string name="do_a_qunut">Do\'a Qunut</string>
    <string name="do_a_iftitah">Do\'a Iftitah</string>
    <string name="doa_iftitah">Doa Iftitah</string>
    <string name="bacaan_tasyahud_akhir">Bacaan Tasyahud Akhir</string>
    <string name="bacaan_tasyahud_awal">Bacaan Tasyahud Awal</string>
    <string name="doa_iftitah_disunnahkan_untuk_dibaca_ketika_mengerjakan_shalat_fardu_ataupun_shalat_sunah_doa_ini_tersedia_dalam_beberapa_versi_dengan_panjang_yang_beragam_rasulullah_saw_bersabda_dalam_sebuah_hadis_shalat_seseorang_tidak_sempurna_hingga_ia_bertakbir_memuji_allah_dan_menyanjungnya_kemudian_membaca_al_quran_yang_mudah_baginya_hr_abu_daud_dan_hakim">Doa iftitah disunnahkan untuk dibaca ketika mengerjakan shalat fardu ataupun shalat sunah. Doa ini tersedia dalam beberapa versi dengan panjang yang beragam.Rasulullah Saw. bersabda dalam sebuah hadis, “Shalat seseorang tidak sempurna hingga ia bertakbir memuji Allah dan menyanjungnya kemudian membaca Al Quran yang mudah baginya” (HR. Abu Daud dan Hakim).</string>
    <string name="iftitah">اللهُ اَكْبَرُ كَبِرًا وَالْحَمْدُ لِلهِ كَشِيْرًا وَسُبْحَانَ اللهِ بُكْرَةً وَاَصِيْلًا . اِنِّى وَجَّهْتُ وَجْهِيَ لِلَّذِيْ فَطَرَالسَّمَاوَاتِ وَالْااَرْضَ حَنِيْفًا مُسْلِمًا وَمَا اَنَا مِنَ الْمُشْرِكِيْنَ . اِنَّ صَلَاتِيْ وَنُسُكِيْ وَمَحْيَايَ وَمَمَاتِيْ لِلهِ رَبِّ الْعَا لَمِيْنَ . لاَ شَرِيْكَ لَهُ وَبِذَ لِكَ اُمِرْتُ وَاَنَ مِنَ الْمُسْلِمِيْنَ</string>
    <string name="artinya_allah_maha_besar_dengan_sebesar_besarnya_segala_puji_bagi_allah_dengan_pujian_yang_banyak_maha_suci_allah_pada_waktu_pagi_dan_petang_sesungguhnya_aku_hadapkan_wajahku_kepada_allah_yang_telah_menciptakan_langit_dan_bumi_dengan_segenap_kepatuhan_atau_dalam_keadaan_tunduk_dan_aku_bukanlah_dari_golongan_orang_orang_yang_menyekutukan_nya_sesungguhnya_shalatku_ibadahku_hidup_dan_matiku_hanyalah_untuk_allah_tuhan_semesta_alam_yang_tidak_ada_sekutu_bagi_nya_dengan_yang_demikian_itulah_aku_diperintahkan_dan_aku_adalah_termasuk_orang_orang_muslim_orang_orang_yang_berserah_diri">Artinya, “Allah Maha Besar dengan sebesar-besarnya, segala puji bagi Allah dengan pujian yang banyak. Maha Suci Allah pada waktu pagi dan petang.Sesungguhnya aku hadapkan wajahku kepada Allah yang telah menciptakan langit dan bumi dengan segenap kepatuhan atau dalam keadaan tunduk, dan aku bukanlah dari golongan orang-orang yang menyekutukan-Nya. Sesungguhnya shalatku, ibadahku, hidup dan matiku hanyalah untuk Allah Tuhan Semesta Alam, yang tidak ada sekutu bagi-Nya. Dengan yang demikian itulah aku diperintahkan. Dan aku adalah termasuk orang-orang muslim (Orang-orang yang berserah diri).”</string>
    <string name="ruku_atau_rukuk_bahasa_arab_merujuk_kepada_gerakan_membungkuk_dan_diikuti_dengan_membaca_bacaan_zikir_di_dalam_salat_rukuk_merupakan_rukun_salat_yang_apabila_ditinggalkan_baik_sengaja_ataupun_tidak_ketika_salat_maka_salatnya_batal_jika_terlupa_melakukan_ruku_di_dalam_salat_maka_pelaku_diwajibkan_menambah_roka_at_dan_sujud_sahwi_ketika_mengingatnya_dalam_bahasa_indonesia_pengertian_rukuk_adalah_sikap_membungkuk_pada_waktu_salat_dengan_tangan_ditekankan_di_lutut_sehingga_punggung_dan_kepala_sama_rata">Ruku\' atau Rukuk (bahasa Arab: رُكوع‎) merujuk kepada gerakan membungkuk dan diikuti dengan membaca bacaan zikir di dalam salat. Rukuk merupakan rukun salat yang apabila ditinggalkan baik sengaja ataupun tidak ketika salat maka salatnya batal. Jika terlupa melakukan Ruku\' di dalam Salat maka pelaku diwajibkan menambah roka\'at dan sujud sahwi ketika mengingatnya. Dalam bahasa Indonesia pengertian rukuk adalah sikap membungkuk pada waktu salat, dengan tangan ditekankan di lutut sehingga punggung dan kepala sama rata</string>
    <string name="bacaanrukuk">سُبْحَانَ رَبِّىَ الْعَظِيْمِ وَبِحَمْدِهِ</string>
    <string name="artinya_mahasuci_dan_maha_agung_allah_segala_puji_baginya">Artinya: Mahasuci dan Maha Agung Allah, segala puji bagiNya.</string>
    <string name="artinya_aku_mendengar_orang_yang_memuji_nya">Artinya : Aku mendengar orang yang memuji-Nya</string>
    <string name="doaitidal">سَمِعَ اللهُ لِمَنْ حَمِدَهُ</string>
    <string name="doa_pertama_bacaan_tasmi">Doa pertama, bacaan tasmi’</string>
    <string name="mengutip_dari_buku_tafsir_shalat_ada_dua_bacaan_doa_i_tidal_yaitu_tasmi_dan_tahmid_bacaan_tasmi_dimulai_sejak_bangkit_dari_rukuk_bukan_setelah_berdiri_dari_ruku_bacaan_ini_wajib_dibaca_oleh_imam_makmum_atau_orang_yang_sholat_sendirian">Mengutip dari buku Tafsir Shalat, ada dua bacaan doa I’tidal, yaitu tasmi’ dan tahmid. Bacaan tasmi’ dimulai sejak bangkit dari rukuk, bukan setelah berdiri dari ruku. Bacaan ini wajib dibaca oleh imam, makmum, atau orang yang sholat sendirian.</string>
    <string name="bacaan_doa_i_tidal">Bacaan Doa I’tidal</string>
    <string name="i_tidal_adalah_gerakan_sholat_yang_dilakukan_di_antara_rukuk_dan_sujud_gerakan_ini_menjadi_salah_satu_rukun_sholat_yang_apabila_tidak_dilakukan_maka_sholat_menjadi_tidak_syar_i">I’tidal adalah gerakan sholat yang dilakukan di antara rukuk dan sujud. Gerakan ini menjadi salah satu rukun sholat yang apabila tidak dilakukan, maka sholat menjadi tidak syar’i.</string>
    <string name="doa_qunut">Doa Qunut</string>
    <string name="doaqunut">اَللّهُمَّ اهْدِنِىْ فِيْمَنْ هَدَيْتَ وَعَافِنِى فِيْمَنْ عَافَيْتَ وَتَوَلَّنِىْ فِيْمَنْ تَوَلَّيْتَ وَبَارِكْ لِىْ فِيْمَا اَعْطَيْتَ وَقِنِيْ شَرَّمَا قَضَيْتَ فَاِ نَّكَ تَقْضِىْ وَلاَ يُقْضَى عَلَيْكَ وَاِ نَّهُ لاَ يَذِلُّ مَنْ وَالَيْتَ وَلاَ يَعِزُّ مَنْ عَادَيْتَ تَبَارَكْتَ رَبَّنَا وَتَعَالَيْتَ فَلَكَ الْحَمْدُ عَلَى مَا قَضَيْتَ وَاَسْتَغْفِرُكَ وَاَتُوْبُ اِلَيْكَ وَصَلَّى اللهُ عَلَى سَيِّدَنَا مُحَمَّدٍ النَّبِيِّ اْلاُمِّيِّ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلَّمَ</string>
    <string name="yang_artinya_ya_allah_tunjukkanlah_aku_sebagaimana_mereka_yang_telah_engkau_beri_petunjuk_berilah_kebaikan_kepadaku_sebagaimana_mereka_yang_telah_engkau_berikan_kebaikan_berilah_kekuatan_kepadaku_sebagaimana_yang_telah_engkau_berikan_kekuatan_berikanlah_keberkahan_kepadaku_pada_apa_apa_yang_telah_engkau_karuniakan_peliharalah_aku_dari_bahaya_kejahatan_yang_telah_engkau_tentukan_maka_sesungguhnya_engkaulah_yang_menentukan_hukuman_dan_tidak_kena_hukum_maka_sesungguhnya_tidak_hina_orang_yang_engkau_berikan_kekuasaan_dan_tidak_akan_mulia_orang_yang_engkau_musuhi_maha_suci_engkau_wahai_tuhan_kami_dan_maha_tinggi_engkau_bagimu_segala_pujian_di_atas_yang_engkau_pastikan_ampunilah_aku_aku_bertaubat_kepada_mu_dan_semoga_allah_mencurahkan_rahmat_dan_kesejahteraan_atas_junjungan_kami_nabi_muhammad_saw_keluarga_dan_sahabatnya">Yang artinya, “Ya Allah, tunjukkanlah aku sebagaimana mereka yang telah Engkau beri petunjuk. Berilah kebaikan kepadaku sebagaimana mereka yang telah Engkau berikan kebaikan. Berilah kekuatan kepadaku sebagaimana yang telah Engkau berikan kekuatan. Berikanlah keberkahan kepadaku pada apa-apa yang telah Engkau karuniakan. Peliharalah aku dari bahaya kejahatan yang telah Engkau tentukan. Maka sesungguhnya Engkaulah yang menentukan hukuman dan tidak kena hukum. Maka sesungguhnya tidak hina orang yang Engkau berikan kekuasaan. Dan tidak akan mulia orang yang Engkau musuhi. Maha Suci Engkau wahai Tuhan kami dan Maha Tinggi Engkau. Bagimu segala pujian di atas yang Engkau pastikan. Ampunilah aku, aku bertaubat kepada-Mu. (Dan semoga Allah) mencurahkan rahmat dan kesejahteraan atas junjungan kami Nabi Muhammad SAW, keluarga, dan sahabatnya,”.</string>
    <string name="SUJUD">SUJUD</string>
    <string name="RUKUK">RUKUK</string>
    <string name="DUDUK_TASYAHUD_AWAL">DUDUK TASYAHUD AWAL</string>
    <string name="DUDUK_TASYAHUD_AKHIR">DUDUK TASYAHUD AKHIR</string>
    <string name="SALAM">SALAM</string>
    <string name="do_a_salam_ke_kanan">Do\'a Salam ke Kanan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
</resources>