<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".niat">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NIAT"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:text="niat sholat sebelum memulai sholat maka membaca niat sholat niat menjadi salah satu rukun sholat yang harus dikerjakan jika tidak maka sholatnya tidak sah dalam niat harus ditentukan jenis jenis sholat yang ingin dikerjakan misalnya sholat wajib atau sunnah makmum atau imam tempat niat di dalam hati tanpa ada khilafiyah di kalangan ulama dalam madzhab syafii diperbolehkan melafadzkan niat bagi orang yang mempunyai penyakit waswas dalam dirinya Seperti di bawah ini kita contohkan menggunakan niat sholat subuh."
        android:textSize="13sp"
        android:layout_marginStart="2dp"
        android:justificationMode="inter_word"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText,MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/imam_sholat_subuh"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/niatimam"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/yang_artinya_aku_berniat_sholat_fardhu_subuh_dua_rakaat_menghadap_kiblat_imam_karena_allah_ta_ala"
        android:textSize="11sp"
        android:textStyle="italic"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/makmum_sholat_subuh"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/niatmakmum"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/yang_artinya_aku_berniat_sholat_fardhu_subuh_dua_rakaat_menghadap_kiblat_sebagai_makmum_karena_allah_ta_ala"
        android:textSize="11sp"
        android:textStyle="italic"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/sendiri_sholat_subuh"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/niatsendiri"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/artinya_aku_berniat_mengerjakan_sholat_fardhu_shubuh_sebanyak_dua_raka_at_dengan_menghadap_kiblat_karena_allah_ta_ala"
        android:textSize="11sp"
        android:textStyle="italic"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

</androidx.constraintlayout.widget.ConstraintLayout>