<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".itidal">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:text="Artinya : Ya Allah Tuhan Kami ! Bagi-Mu lah Segala Puji, sepenuh langit dan bumi, dan sepenuh barang yang Kau kehendaki sesudah itu."
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/itidal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:text="@string/i_tidal_adalah_gerakan_sholat_yang_dilakukan_di_antara_rukuk_dan_sujud_gerakan_ini_menjadi_salah_satu_rukun_sholat_yang_apabila_tidak_dilakukan_maka_sholat_menjadi_tidak_syar_i"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacaan_doa_i_tidal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="190dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="332dp"
        android:layout_height="61dp"
        android:layout_marginTop="5dp"
        android:justificationMode="inter_word"
        android:text="@string/mengutip_dari_buku_tafsir_shalat_ada_dua_bacaan_doa_i_tidal_yaitu_tasmi_dan_tahmid_bacaan_tasmi_dimulai_sejak_bangkit_dari_rukuk_bukan_setelah_berdiri_dari_ruku_bacaan_ini_wajib_dibaca_oleh_imam_makmum_atau_orang_yang_sholat_sendirian"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="283dp"
        android:layout_height="218dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:srcCompat="@drawable/itidal" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doa_pertama_bacaan_tasmi"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:text="@string/doaitidal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/artinya_aku_mendengar_orang_yang_memuji_nya"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Doa kedua, tahmid"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginEnd="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="رَبَّنَا لَكَ الْحَمْدُ مِلْءَ السَّمَوَاتِ وَمِلْءَ الْأَرْضِ وَمِلْءَ مَا شِئْتَ مِنْ شَيْءٍ بَعْدُ"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />


</androidx.constraintlayout.widget.ConstraintLayout>