<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".rukuk">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15sp"
        android:text="@string/RUKUK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:text="@string/ruku_atau_rukuk_bahasa_arab_merujuk_kepada_gerakan_membungkuk_dan_diikuti_dengan_membaca_bacaan_zikir_di_dalam_salat_rukuk_merupakan_rukun_salat_yang_apabila_ditinggalkan_baik_sengaja_ataupun_tidak_ketika_salat_maka_salatnya_batal_jika_terlupa_melakukan_ruku_di_dalam_salat_maka_pelaku_diwajibkan_menambah_roka_at_dan_sujud_sahwi_ketika_mengingatnya_dalam_bahasa_indonesia_pengertian_rukuk_adalah_sikap_membungkuk_pada_waktu_salat_dengan_tangan_ditekankan_di_lutut_sehingga_punggung_dan_kepala_sama_rata"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:justificationMode="inter_word"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="283dp"
        android:layout_height="218dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/rukukback" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacaanrukuk"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/artinya_mahasuci_dan_maha_agung_allah_segala_puji_baginya"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>